<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hwcv</name>
  <version>0.0.0</version>
  <description>Hardware accelerated computer vision</description>
  <maintainer email="sw.allak@gmail.com">swallak</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>OpenCV</depend>
  <depend>ament_vitis</depend>
  <depend>vitis_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
